subnet.tf
resource "aws_subnet" "pro_subnet" {
  vpc_id                  = aws_vpc.provpc.id
  cidr_block              = "192.168.1.0/24"
  availability_zone       = "ap-south-1a"
  map_public_ip_on_launch = true

  tags = {
    Name = "public-subnet"
  }
}
